--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,9 @@
     "api/index.php": {
       "runtime": "vercel-php@0.3.2"
     }
-  }
+  },
+    "routes": [
+    { "src": "/(.*)",  "dest": "/api/index.php" }
+  ]
 }
+
